# bit-bridge

./: .clang-tidy  .gitignore  CMakeLists.txt  Makefile  README.md  bitbridge-config.example.yaml  bitbridge-settings.toml  main.cpp
.docker/: ci.Dockerfile  runtime.Dockerfile
.github/workflows/: ci.yaml  docker-ci.yaml  release.yaml
agents/: PROJECT_PLAN.md
bench/: CMakeLists.txt  main.cpp
bench/baselines/: baseline.json
core/: CMakeLists.txt  main.cpp
core/health/: HealthChecker.cpp  HealthChecker.hpp
core/proxy/: Session.cpp  Session.hpp  TcpProxy.cpp  TcpProxy.hpp
core/routing/: ConsistentHashStrategy.cpp  ConsistentHashStrategy.hpp  FnvHash.hpp  HashCollisionError.hpp  IRoutingStrategy.hpp  P2CStrategy.cpp  P2CStrategy.hpp  RoutingError.hpp  Xoshiro256.cpp  Xoshiro256.hpp
core/state/: ServicePool.cpp  ServicePool.hpp  ServiceState.cpp  ServiceState.hpp
lib/: CMakeLists.txt
lib/model/: HealthCheckConfig.cpp  LoadBalancerConfig.cpp  ServiceNode.cpp  ServiceNode.hpp
lib/serialization/: IConfigSerializer.hpp  YamlConfigSerializer.cpp  YamlConfigSerializer.hpp
scripts/: pre-push
src/model/: ConnectionConfig.cpp  ConnectionConfig.hpp  HealthCheckConfig.hpp  LoadBalancerConfig.cpp  LoadBalancerConfig.hpp  ServiceNode.cpp
src/serialization/: IConfigSerializer.hpp  YamlConfigSerializer.cpp  YamlConfigSerializer.hpp
src/ui/: AppSettings.cpp  AppSettings.hpp  BitBridgeApp.cpp  BitBridgeApp.hpp  MainFrame.cpp  MainFrame.hpp
tests/: CMakeLists.txt
tests/core/health/: HealthCheckerTest.cpp
tests/core/proxy/: SessionTest.cpp  TcpProxyTest.cpp
tests/core/routing/: ConsistentHashStrategyTest.cpp  P2CStrategyTest.cpp
tests/core/state/: ServicePoolTest.cpp  ServiceStateTest.cpp
tests/lib/model/: LoadBalancerConfigTest.cpp  ServiceNodeTest.cpp
tests/lib/serialization/: YamlConfigSerializerTest.cpp
tests/model/: ConnectionConfigTest.cpp  HealthCheckConfigTest.cpp
ui/: AppSettings.cpp  AppSettings.hpp  BitBridgeApp.cpp  BitBridgeApp.hpp  CMakeLists.txt  MainFrame.cpp  MainFrame.hpp  main.cpp
